--- a/main.css
+++ b/main.css
@@ -130,15 +130,72 @@ nav .fa-bars{
     padding-top: 100px;
     padding-bottom: 100px;
 }
+#testimonials h1{
+    margin-bottom: 20px;
+    color: #013f7e ;
+}
+#testimonials p{
+    margin-bottom: 28px;
+    font-weight: 700;
+}
 #testimonials .col-md-4{
     padding: 10px 30px;
 }
 #testimonials img{
     width: 60px;
     height: 60px;
-    border-radius: 20%;
+    border-radius: 50%;
+    display: flex;
+   border: 6px solid #013f7e;
+   justify-content: left;
+   transform: translateX(-60px);
 }
 .review{
     font-size: 18px;
     padding: 10px 10px 10px 30px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.2)
 }
+.review .fa{
+    font-size: 20px;
+    color: #013f7e;
+}
+#testimonials span{
+    font-size: 18px;
+    font-weight: 600;
+    color: #013f7e;
+}
+#testimonials .middle{
+    margin-bottom: 20px;
+    margin-top: -28px;
+}
+
+.subscribe{
+    padding: 50px 20px;
+    background-color: #013f7e;
+    position: relative;
+    box-shadow: 0 0 20px 7px rgba(0, 0, 0, 0.2);
+}
+.subscribe h3,.subscribe p {
+    color: #fff;
+}
+.subscribe .input-group{
+    border-radius: 30px;
+    background: #fff;
+    max-width: 500px;
+    margin: 10px auto;
+    padding: 5px;
+
+}
+.subscribe .form-control{
+   border: none;
+   background: transparent;
+}
+.subscribe .form-control:focus{
+    box-shadow: none;
+    background: transparent;
+ }
+ .subscribe .input-group-append{
+    background-color: #333;
+    border-radius: 30px;
+ }
