--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@
 }
 /*-----CSS for header and nav-------*/
 #header{
-    background-image: url(https://images.pexels.com/photos/372326/pexels-photo-372326.jpeg?auto=compress&cs=tinysrgb&w=600);
+    background-image: url(images/bannerOne.jpg);
     height: 80vh;
     background-size: cover;
     background-position: center;
@@ -18,6 +18,7 @@
 .navbar-brand h3{
     width: 150px;
     margin-left: 30px;
+    color: #fff;
 }
 .navbar-toggler{
     border: none !important;
@@ -253,3 +254,25 @@ nav .fa-bars{
     margin-bottom: -80px;
     font-size: 18px;
  }
+
+
+ .slide-Left{
+    animation: 2s slideLeft linear forwards ;
+  }
+  @keyframes slideLeft {
+    0% {
+      transform: translateX(-100px);
+      opacity: 0;
+    }
+    50% {
+      transform: translateX(-50px);
+      opacity: 0.1;
+    }
+    100%{
+      transform: translateX(0px);
+      opacity: 1;
+    } 
+  }
+  #welcome .slide-Left{
+    animation-delay: 3s;
+  }
