--- a/main.css
+++ b/main.css
@@ -381,16 +381,20 @@ a {
 
 
 .swiper{
-    width: 80%;
+    width: 100%;
     height: fit-content;
+    border-radius: 20px;
+    margin-top: 15px;
+    
 }
 .swiper-slide img{
     width: 100%;
+    height: fit-content;
 
 }
 .swiper .swiper-button-prev, .swiper .swiper-button-next{
-    color: #ffff;
+    color: #000;
 }
 .swiper .swiper-pagination-bullet-active{
-    background: #ffff;
+    background: #000;
 }
