--- a/main.css
+++ b/main.css
@@ -38,6 +38,23 @@ nav .fa-bars{
 
 /*-----endOfNavSection-------*/
 /*-----CSS for welcome section-------*/
+.site-heading h1{
+    font-size: 2.5rem;
+}
+@media (min-width: 1200px) {
+    h1{
+      font-size: 3.5rem;
+    }
+  }
+  
+  h2, .h2 {
+    font-size: calc(1.325rem + 0.9vw);
+  }
+  @media (min-width: 1200px) {
+    h2, .h2 {
+      font-size: 2rem;
+    }
+  }
 .welcome{
     padding: 50px 100px;
     margin-top: 0;
