--- a/main.css
+++ b/main.css
@@ -23,8 +23,8 @@
 
 
 .navbar-brand h3{
-    width: 150px;
-    margin-left: 30px;
+    width: 7px;
+    margin: none ;
     color: #fff;
 }
 .navbar-toggler{
