--- a/main.css
+++ b/main.css
@@ -1,6 +1,8 @@
 *{
     margin: 0;
-    padding: 0;
+    
+    padding-left: 1%;
+    padding-right: 1%;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     box-sizing: border-box;
 }
@@ -38,6 +40,7 @@ nav .fa-bars{
 
 /*-----endOfNavSection-------*/
 /*-----CSS for welcome section-------*/
+ 
 .site-heading h1{
     font-size: 2.5rem;
 }
@@ -72,6 +75,10 @@ nav .fa-bars{
 }
 .welcome .btn:focus{
     box-shadow: none;
+}
+.bannerLogo {
+    width: 300px;
+    height: 50px;
 }
 /*-----end of welcome section-------*/
 /*-----CSS for about youth church section-------*/
