--- a/main.css
+++ b/main.css
@@ -1,9 +1,8 @@
 *{
-    margin: 0;
-    
+    margin: 0; 
     padding-left: 1%;
     padding-right: 1%;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 }
 /*-----CSS for header and nav-------*/
@@ -92,6 +91,9 @@ nav .fa-bars{
 }
 #about h3{
     margin: 21px auto;
+}
+#about h1{
+    color: #4c76e2 ;
 }
 /*-----end of about youth church section-------*/
 /*-----services section-------*/
@@ -223,7 +225,7 @@ nav .fa-bars{
  #footer{
     margin-top: 80px;
     padding: 100px;
-    background-color: #efefef;
+    background-color: #0c0202;
     color: #013f7e;
  }
  .footerLogo{
@@ -266,19 +268,19 @@ nav .fa-bars{
 
 
  .slide-Left{
-    animation: 5s slideLeft linear forwards ;
+    animation: 2s slideLeft linear forwards ;
   }
   @keyframes slideLeft {
     0% {
-      transform: translateX(-100px);
+      transform: translateY(100px);
       opacity: 0;
     }
     50% {
-      transform: translateX(-50px);
+      transform: translateY(50px);
       opacity: 0.1;
     }
     100%{
-      transform: translateX(0px);
+      transform: translateY(0px);
       opacity: 1;
     } 
   }
@@ -460,5 +462,7 @@ a {
 .card:hover .figureCaption{
     transform: none;
 }
-
- 
+.btn-primary{
+    align-items: center;
+    margin-left: 30%;
+}
