--- a/main.css
+++ b/main.css
@@ -226,7 +226,7 @@ nav .fa-bars{
     margin-top: 80px;
     padding: 100px;
     background-color: #0c0202;
-    color: #013f7e;
+    color:  #0d6efd;
  }
  .footerLogo{
     width: 150px;
